--- a/package.json
+++ b/package.json
@@ -18,13 +18,15 @@
     "react-icons": "^5.5.0",
     "react-router": "^7.4.1",
     "react-router-dom": "^7.4.1",
-    "tailwindcss": "^4.0.17"
+    "tailwindcss": "^4.0.17",
+    "typo-js": "^1.2.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
     "@types/react": "^19.0.10",
     "@types/react-bootstrap": "^0.32.37",
     "@types/react-dom": "^19.0.4",
+    "@types/typo-js": "^1.2.2",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
