--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "concurrently \"node api-gateway/index.js\" \"node user-service/index.js\""
+    "dev": "concurrently \"node api-gateway/index.js\" \"node user-service/index.js\"  \"node location-service/index.js\""
   },
   "keywords": [],
   "author": "",
@@ -12,5 +12,10 @@
   "description": "",
   "devDependencies": {
     "concurrently": "^9.1.2"
+  },
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
+    "mongodb": "^6.16.0"
   }
 }
